# rn-subscriberRegistry

./: Makefile.am  Makefile.common  SubscriberRegistry.cpp  SubscriberRegistry.h  configure.ac  servershare.cpp  sipauthserve.conf
Globals/: Globals.h
apps/: Makefile.am  SubscriberRegistry.cpp  SubscriberRegistry.h  config_items.txt  milenage.cpp  milenage.h  rijndael.cpp  rijndael.h  rijndaelstatics.h  servershare.cpp  servershare.h  sipauthserve.cpp
fixmes/: Makefile.am  Threads.cpp  Utils.cpp  Utils.h  sqlite3util.cpp
test.sipauthserve/: notes1.txt  notes2.txt  red-good2.txt  reg-good.txt  sr.db.init
